test for beans